--- a/back/src/SistemaGestaoBiblioteca.Application/SistemaGestaoBiblioteca.Application.csproj
+++ b/back/src/SistemaGestaoBiblioteca.Application/SistemaGestaoBiblioteca.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SistemaGestaoBiblioteca.Domain\SistemaGestaoBiblioteca.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
