--- a/back/src/SistemaGestaoBiblioteca.Infrastructure/SistemaGestaoBiblioteca.Infrastructure.csproj
+++ b/back/src/SistemaGestaoBiblioteca.Infrastructure/SistemaGestaoBiblioteca.Infrastructure.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SistemaGestaoBiblioteca.Application\SistemaGestaoBiblioteca.Application.csproj" />
+    <ProjectReference Include="..\SistemaGestaoBiblioteca.Domain\SistemaGestaoBiblioteca.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
