--- a/back/tests/SistemaGestaoBiblioteca.UnitTests/SistemaGestaoBiblioteca.UnitTests.csproj
+++ b/back/tests/SistemaGestaoBiblioteca.UnitTests/SistemaGestaoBiblioteca.UnitTests.csproj
@@ -11,9 +11,16 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="MediatR" Version="12.3.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\SistemaGestaoBiblioteca.Application\SistemaGestaoBiblioteca.Application.csproj" />
+    <ProjectReference Include="..\..\src\SistemaGestaoBiblioteca.Domain\SistemaGestaoBiblioteca.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
