--- a/back/src/SistemaGestaoBiblioteca.Api/SistemaGestaoBiblioteca.Api.csproj
+++ b/back/src/SistemaGestaoBiblioteca.Api/SistemaGestaoBiblioteca.Api.csproj
@@ -9,12 +9,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\SistemaGestaoBiblioteca.Application\SistemaGestaoBiblioteca.Application.csproj" />
+    <ProjectReference Include="..\SistemaGestaoBiblioteca.Infrastructure\SistemaGestaoBiblioteca.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
