--- a/back/src/SistemaGestaoBiblioteca.Api/appsettings.json
+++ b/back/src/SistemaGestaoBiblioteca.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppConnection": "Server=db-local;Database=App;User Id=sa;Password=P@ssw0rd;TrustServerCertificate=True"
+  }
 }
