--- a/back/src/SistemaGestaoBiblioteca.Application/SistemaGestaoBiblioteca.Application.csproj
+++ b/back/src/SistemaGestaoBiblioteca.Application/SistemaGestaoBiblioteca.Application.csproj
@@ -7,12 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="12.3.0" />
+    <PackageReference Include="MediatR" Version="12.4.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SistemaGestaoBiblioteca.Domain\SistemaGestaoBiblioteca.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Queries\" />
   </ItemGroup>
 
 </Project>
